[gd_scene load_steps=10 format=4 uid="uid://ceqqu2aieg5pq"]

[ext_resource type="Texture2D" uid="uid://dtlm84p262rea" path="res://4all/4all Tileset/Tilemap/monochrome_tilemap_packed.png" id="1_p51yp"]
[ext_resource type="Script" uid="uid://cw540ugi1t66f" path="res://Chunks/Chunk05/chunk_05.gd" id="1_pddap"]
[ext_resource type="Texture2D" uid="uid://b1t8tww3dy52c" path="res://4all/4all Tileset/Tilemap/monochrome_tilemap_transparent_packed.png" id="2_d41ot"]
[ext_resource type="Script" uid="uid://b4xjjwimvst0s" path="res://Chunks/Chunk05/tile_map_layer.gd" id="3_ro1ak"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pddap"]
texture = ExtResource("1_p51yp")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
3:10/0 = 0
0:10/0 = 0
1:10/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
11:14/0 = 0
10:0/0 = 0
12:0/0 = 0
11:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:12/0 = 0
0:13/0 = 0
0:14/0 = 0
0:15/0 = 0
0:16/0 = 0
0:17/0 = 0
0:18/0 = 0
0:19/0 = 0
0:11/0 = 0
1:12/0 = 0
2:12/0 = 0
1:11/0 = 0
1:13/0 = 0
1:14/0 = 0
1:15/0 = 0
1:16/0 = 0
1:17/0 = 0
1:18/0 = 0
1:19/0 = 0
2:11/0 = 0
2:13/0 = 0
2:14/0 = 0
2:15/0 = 0
2:16/0 = 0
2:17/0 = 0
2:18/0 = 0
2:19/0 = 0
3:11/0 = 0
3:12/0 = 0
3:13/0 = 0
3:14/0 = 0
3:15/0 = 0
3:16/0 = 0
3:17/0 = 0
3:18/0 = 0
3:19/0 = 0
4:10/0 = 0
4:12/0 = 0
4:13/0 = 0
5:13/0 = 0
5:14/0 = 0
5:15/0 = 0
5:16/0 = 0
5:17/0 = 0
5:18/0 = 0
5:19/0 = 0
4:14/0 = 0
4:15/0 = 0
4:16/0 = 0
4:17/0 = 0
4:18/0 = 0
4:19/0 = 0
6:10/0 = 0
6:13/0 = 0
6:14/0 = 0
6:15/0 = 0
6:16/0 = 0
6:17/0 = 0
6:18/0 = 0
6:19/0 = 0
7:19/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:10/0 = 0
16:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:10/0 = 0
17:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:10/0 = 0
18:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:10/0 = 0
19:11/0 = 0
10:11/0 = 0
10:12/0 = 0
10:14/0 = 0
10:15/0 = 0
10:16/0 = 0
10:17/0 = 0
10:18/0 = 0
10:19/0 = 0
11:19/0 = 0
9:11/0 = 0
9:12/0 = 0
9:14/0 = 0
9:15/0 = 0
9:16/0 = 0
9:17/0 = 0
9:18/0 = 0
9:19/0 = 0
8:11/0 = 0
8:13/0 = 0
8:14/0 = 0
8:15/0 = 0
8:16/0 = 0
8:17/0 = 0
8:18/0 = 0
8:19/0 = 0
7:18/0 = 0
7:14/0 = 0
7:13/0 = 0
7:11/0 = 0
7:15/0 = 0
7:16/0 = 0
7:17/0 = 0
11:11/0 = 0
11:12/0 = 0
11:15/0 = 0
12:16/0 = 0
12:17/0 = 0
12:18/0 = 0
12:19/0 = 0
11:16/0 = 0
11:17/0 = 0
11:18/0 = 0
12:8/0 = 0
12:9/0 = 0
12:11/0 = 0
12:12/0 = 0
12:13/0 = 0
12:14/0 = 0
12:15/0 = 0
13:8/0 = 0
13:9/0 = 0
13:11/0 = 0
13:12/0 = 0
13:13/0 = 0
13:14/0 = 0
13:15/0 = 0
13:16/0 = 0
13:17/0 = 0
13:18/0 = 0
13:19/0 = 0
14:8/0 = 0
14:9/0 = 0
14:11/0 = 0
14:12/0 = 0
14:13/0 = 0
14:14/0 = 0
14:15/0 = 0
14:16/0 = 0
14:17/0 = 0
14:18/0 = 0
14:19/0 = 0
15:19/0 = 0
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:11/0 = 0
15:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:12/0 = 0
15:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:13/0 = 0
15:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:14/0 = 0
15:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:15/0 = 0
15:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:16/0 = 0
15:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:17/0 = 0
15:18/0 = 0
16:8/0 = 0
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:11/0 = 0
16:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:12/0 = 0
16:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:13/0 = 0
16:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:14/0 = 0
16:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:15/0 = 0
16:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:16/0 = 0
16:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:17/0 = 0
16:18/0 = 0
16:19/0 = 0
17:19/0 = 0
17:8/0 = 0
17:9/0 = 0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:11/0 = 0
17:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:12/0 = 0
17:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:13/0 = 0
17:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:14/0 = 0
17:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:15/0 = 0
17:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:16/0 = 0
17:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:17/0 = 0
17:18/0 = 0
11:8/0 = 0
10:8/0 = 0
10:9/0 = 0
11:9/0 = 0
5:12/0 = 0
18:17/0 = 0
18:18/0 = 0
18:19/0 = 0
19:12/0 = 0
19:13/0 = 0
19:14/0 = 0
19:15/0 = 0
19:16/0 = 0
19:17/0 = 0
19:18/0 = 0
19:19/0 = 0
18:8/0 = 0
18:9/0 = 0
18:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:11/0 = 0
18:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:12/0 = 0
18:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:13/0 = 0
18:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:14/0 = 0
18:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:15/0 = 0
18:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:16/0 = 0
18:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:7/0 = 0
19:8/0 = 0
19:9/0 = 0
15:8/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
16:5/0 = 0
15:5/0 = 0
14:5/0 = 0
13:5/0 = 0
12:5/0 = 0
11:5/0 = 0
10:5/0 = 0
18:5/0 = 0
17:5/0 = 0
19:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rvxa2"]
texture = ExtResource("2_d41ot")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0/physics_layer_0/polygon_0/one_way = true
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0/physics_layer_0/polygon_0/one_way = true
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0/physics_layer_0/polygon_0/one_way = true
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
18:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:12/0/custom_data_0 = true
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
18:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:16/0/custom_data_0 = true
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0

[sub_resource type="TileSet" id="TileSet_c5nkj"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 8
custom_data_layer_0/name = "breakable"
custom_data_layer_0/type = 1
sources/1 = SubResource("TileSetAtlasSource_pddap")
sources/2 = SubResource("TileSetAtlasSource_rvxa2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ro1ak"]
size = Vector2(203, 201)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pddap"]
radius = 74.0
height = 236.0

[node name="Chunk05" type="Node2D" groups=["special_chunk"]]
script = ExtResource("1_pddap")
metadata/_edit_horizontal_guides_ = [0.0, 600.0]
metadata/_edit_vertical_guides_ = [16.0, 224.0]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQARAAoAAAAAAAEAAQARAAoAAAAAAAIAAQATAA0AAAAAAAMAAQASABIAAAAAAAQAAQATAAoAAAAAAAUAAQARAAoAAAAAAAYAAQARAA4AAAAAAAcAAQARAA4AAAAAAAgAAQARAA4AAAAAAAkAAQARAA4AAAAAAAoAAQARAA4AAAAAAAsAAQARAA4AAAAAAAwAAQARAA4AAAAAAA0AAQARAA4AAAAOAAAAAQAPAAoAAAAOAAEAAQAPAAoAAAAOAAIAAQAPAAoAAAAOAAMAAQAPAAoAAAAOAAQAAQATAAwAAAAOAAUAAQASABIAAAAOAAYAAQASABIAAAAOAAcAAQASABIAAAAOAAgAAQASABIAAAAOAAkAAQASABIAAAAOAAoAAQASABIAAAAOAAsAAQATAAsAAAAOAAwAAQAPAAoAAAAOAA0AAQAPAAoAAAAOAA4AAQAPAAoAAAAAAA4AAQARAA4AAAAOAA8AAQAPAAoAAAAOABAAAQATAAwAAAAOABEAAQASABIAAAAOABIAAQATAAsAAAAAABIAAQARAA4AAAAAABMAAQARAA4AAAAAABQAAQARAA4AAAAAABUAAQARAA4AAAAAABYAAQARAA4AAAAAABcAAQARAA4AAAAAABgAAQARAA4AAAAOABcAAQAPAA8AAAAAABkAAQARAA4AAAAOABMAAQAPAA4AAAAAABwAAQARAA4AAAAOABsAAQASABIAAAAOAB4AAQASABIAAAAOAB8AAQATAAsAAAAOACAAAQAPAA4AAAAOACEAAQAPAA4AAAAOACIAAQAPAA4AAAAAAB0AAQARAA4AAAAAAB4AAQARAAoAAAAAAB8AAQARAAoAAAAAACAAAQARAAoAAAAAACEAAQARAAoAAAAAABsAAQARAA4AAAAAABoAAQARAA4AAAAOABwAAQASABIAAAAOAB0AAQASABIAAAAAACIAAQARAA4AAAAAACMAAQARAA4AAAAAACQAAQARAA4AAAAAACUAAQARAA4AAAAOACMAAQAPAA4AAAAOACQAAQAPAA4AAAAOACUAAQAPAA4AAAAOABYAAQAPAA4AAAAOABUAAQAPAA4AAAAOABQAAQAPAA4AAAAAAA8AAQARAA4AAAAAABAAAQARAA4AAAAAABEAAQARAA4AAAABAAIAAQARAA0AAAABAAMAAQARAA4AAAABAAQAAQARAA8AAAALAAYAAQAPAA0AAAALAAcAAQAPAA4AAAALAAgAAQAPAA8AAAAMAAUAAQAPAA0AAAAMAAYAAQATAAwAAAAMAAcAAQASABIAAAAMAAgAAQASABIAAAAMAAkAAQAPAA8AAAANAAkAAQATAAsAAAANAAoAAQAPAA4AAAANAAsAAQAPAA8AAAANAAQAAQAPAA0AAAANAAUAAQATAAwAAAANAAYAAQASABIAAAANAAcAAQASABIAAAANAAgAAQASABIAAAANABAAAQAPAA0AAAANABEAAQAPAA4AAAANABIAAQAPAA8AAAAOABoAAQAQAA0AAAANABoAAQAPAA0AAAAMABsAAQAPAA0AAAAMABwAAQAPAA4AAAALAB0AAQAQABAAAAAKAB0AAQAPABAAAAAMAB4AAQAPAA8AAAANAB8AAQAPAA8AAAANAB4AAQASABIAAAAMAB0AAQATAAwAAAANAB0AAQASABIAAAANABwAAQASABIAAAANABsAAQATAAwAAAABABsAAgASABAAAAACABsAAgASABAAAAADABsAAgASABAAAAADABwAAgASABAAAAAEABwAAgASABAAAAAEAB0AAgASABAAAAAEAB4AAgASABAAAAAEAB8AAgASABAAAAAEACAAAgASABAAAAAFACAAAgASABAAAAAFACEAAgASABAAAAAEACEAAgASABAAAAADACEAAgASABAAAAACACEAAgASABAAAAABACEAAgASABAAAAADACAAAgASABAAAAADAB8AAgASABAAAAACAB8AAgASABAAAAACAB4AAgASABAAAAABAB4AAgASABAAAAABAB0AAgASABAAAAABABwAAgASABAAAAABAB8AAgASABAAAAABACAAAgASABAAAAACACAAAgASABAAAAACAB0AAgASABAAAAACABwAAgASABAAAAADAB0AAgASABAAAAADAB4AAgASABAAAAALACIAAgASABAAAAAMACIAAgASABAAAAAMACMAAgASABAAAAANACMAAgASABAAAAANACIAAgASABAAAAADAA4AAgAEAAIAAAAEAA4AAgAFAAIAAAAFAA4AAgAGAAIAAAAPABcAAQAQAAsAAAAQABcAAQARAAsAAAAPABoAAQAQAAkAAAAQABoAAQAQAAkAAAAPABsAAQASABIAAAAQABsAAQASABIAAAAQABwAAQASABIAAAAPABwAAQASABIAAAAQAB0AAQASABIAAAAPAB0AAQASABIAAAAQABYAAQARAAoAAAAPABYAAQASABIAAAAPABUAAQASABIAAAAPABQAAQASABIAAAAQABQAAQASABIAAAAQABMAAQASABIAAAAPABMAAQASABIAAAAPABIAAQASABIAAAAQABUAAQATAAoAAAAQABIAAQASABIAAAAPAAkAAQASABIAAAAPAAoAAQASABIAAAAPAAsAAQASABIAAAAPAAwAAQASABIAAAAPAA0AAQASABIAAAAPAA4AAQASABIAAAAPAA8AAQASABIAAAAPABAAAQASABIAAAAPABEAAQASABIAAAAQABEAAQASABIAAAAPAAcAAQASABIAAAAQAAcAAQASABIAAAAQAAgAAQASABIAAAAPAAgAAQASABIAAAAQAAkAAQASABIAAAAQAAoAAQASABIAAAAQAAsAAQASABIAAAAQAAwAAQASABIAAAAQAA0AAQASABIAAAAQAA4AAQASABIAAAAQAA8AAQASABIAAAAQABAAAQASABIAAAAQAB4AAQASABIAAAAPAB4AAQASABIAAAAPAB8AAQASABIAAAAPACAAAQASABIAAAAPACEAAQASABIAAAAPACIAAQASABIAAAAPACMAAQASABIAAAAPACQAAQASABIAAAAPACUAAQASABIAAAAQACUAAQASABIAAAAQACQAAQASABIAAAAQACMAAQASABIAAAAQACIAAQASABIAAAAQACEAAQASABIAAAAQACAAAQASABIAAAAQAB8AAQASABIAAAAQAAAAAQASABIAAAAPAAAAAQASABIAAAAPAAEAAQASABIAAAAPAAIAAQASABIAAAAPAAMAAQASABIAAAAPAAQAAQASABIAAAAPAAUAAQASABIAAAAPAAYAAQASABIAAAAQAAYAAQASABIAAAAQAAUAAQASABIAAAAQAAQAAQASABIAAAAQAAMAAQASABIAAAAQAAIAAQASABIAAAAQAAEAAQASABIAAAARAAAAAQASABIAAAARAAEAAQASABIAAAARAAIAAQASABIAAAARAAMAAQASABIAAAARAAQAAQASABIAAAARAAUAAQASABIAAAARAAYAAQASABIAAAARAAcAAQASABIAAAARAAgAAQASABIAAAARAAkAAQASABIAAAARAAoAAQASABIAAAARAAsAAQASABIAAAARAAwAAQASABIAAAARAA0AAQASABIAAAARAA4AAQASABIAAAARAA8AAQASABIAAAARABAAAQASABIAAAARABEAAQASABIAAAARABIAAQASABIAAAARABMAAQATAAoAAAARABQAAQARAAoAAAARABUAAQARAAsAAAARABoAAQAQAAkAAAARABsAAQASABIAAAARABwAAQASABIAAAARAB0AAQASABIAAAARAB4AAQASABIAAAARAB8AAQASABIAAAARACAAAQASABIAAAARACEAAQASABIAAAARACIAAQASABIAAAARACMAAQASABIAAAARACQAAQASABIAAAARACUAAQASABIAAAASAAAAAQASABIAAAASAAEAAQASABIAAAASAAIAAQASABIAAAASAAMAAQASABIAAAASAAQAAQASABIAAAASAAUAAQASABIAAAASAAYAAQASABIAAAASAAcAAQASABIAAAASAAgAAQASABIAAAASAAkAAQASABIAAAASAAoAAQASABIAAAASAAsAAQASABIAAAASAAwAAQASABIAAAASAA0AAQASABIAAAASAA4AAQASABIAAAASAA8AAQASABIAAAASABAAAQASABIAAAASABEAAQASABIAAAASABIAAQATAAoAAAASABMAAQARAAsAAAASABoAAQARAAkAAAASABsAAQATAAkAAAASABwAAQASABIAAAASAB0AAQASABIAAAASAB4AAQASABIAAAASAB8AAQASABIAAAASACAAAQASABIAAAASACEAAQASABIAAAASACIAAQASABIAAAASACMAAQASABIAAAASACQAAQASABIAAAASACUAAQASABIAAAATAAAAAQASABIAAAATAAEAAQASABIAAAATAAIAAQASABIAAAATAAMAAQASABIAAAATAAQAAQASABIAAAATAAUAAQASABIAAAATAAYAAQASABIAAAATAAcAAQASABIAAAATAAgAAQASABIAAAATAAkAAQASABIAAAATAAoAAQASABIAAAATAAsAAQASABIAAAATAAwAAQASABIAAAATAA0AAQASABIAAAATAA4AAQASABIAAAATAA8AAQASABIAAAATABAAAQASABIAAAATABEAAQASABIAAAATABIAAQAQAAsAAAATABsAAQAQAAkAAAATABwAAQASABIAAAATAB0AAQASABIAAAATAB4AAQASABIAAAATAB8AAQASABIAAAATACAAAQASABIAAAATACEAAQASABIAAAATACIAAQASABIAAAATACMAAQASABIAAAATACQAAQASABIAAAATACUAAQASABIAAAAUAAAAAQASABIAAAAUAAEAAQASABIAAAAUAAIAAQASABIAAAAUAAMAAQASABIAAAAUAAQAAQASABIAAAAUAAUAAQASABIAAAAUAAYAAQASABIAAAAUAAcAAQASABIAAAAUAAgAAQASABIAAAAUAAkAAQASABIAAAAUAAoAAQASABIAAAAUAAsAAQASABIAAAAUAAwAAQASABIAAAAUAA0AAQASABIAAAAUAA4AAQASABIAAAAUAA8AAQASABIAAAAUABAAAQASABIAAAAUABEAAQASABIAAAAUABIAAQAQAAsAAAAUABsAAQARAAkAAAAUABwAAQARAAoAAAAUAB0AAQATAAkAAAAUAB4AAQASABIAAAAUAB8AAQASABIAAAAUACAAAQASABIAAAAUACEAAQASABIAAAAUACIAAQASABIAAAAUACMAAQASABIAAAAUACQAAQASABIAAAAUACUAAQASABIAAAAVAAAAAQASABIAAAAVAAEAAQASABIAAAAVAAIAAQASABIAAAAVAAMAAQASABIAAAAVAAQAAQASABIAAAAVAAUAAQASABIAAAAVAAYAAQASABIAAAAVAAcAAQASABIAAAAVAAgAAQASABIAAAAVAAkAAQASABIAAAAVAAoAAQASABIAAAAVAAsAAQASABIAAAAVAAwAAQASABIAAAAVAA0AAQASABIAAAAVAA4AAQASABIAAAAVAA8AAQASABIAAAAVABAAAQASABIAAAAVABEAAQASABIAAAAVABIAAQATAAUAAAAVAB0AAQAQAAkAAAAVAB4AAQASABIAAAAVAB8AAQASABIAAAAVACAAAQASABIAAAAVACEAAQASABIAAAAVACIAAQASABIAAAAVACMAAQASABIAAAAVACQAAQASABIAAAAVACUAAQASABIAAAAWAAAAAQASABIAAAAWAAEAAQASABIAAAAWAAIAAQASABIAAAAWAAMAAQASABIAAAAWAAQAAQASABIAAAAWAAUAAQASABIAAAAWAAYAAQASABIAAAAWAAcAAQASABIAAAAWAAgAAQASABIAAAAWAAkAAQASABIAAAAWAAoAAQASABIAAAAWAAsAAQASABIAAAAWAAwAAQASABIAAAAWAA0AAQASABIAAAAWAA4AAQASABIAAAAWAA8AAQASABIAAAAWABAAAQASABIAAAAWABEAAQASABIAAAAWABIAAQAQAAsAAAAWAB0AAQAQAAkAAAAWAB4AAQASABIAAAAWAB8AAQASABIAAAAWACAAAQASABIAAAAWACEAAQASABIAAAAWACIAAQASABIAAAAWACMAAQASABIAAAAWACQAAQASABIAAAAWACUAAQASABIAAAAXAAAAAQASABIAAAAXAAEAAQASABIAAAAXAAIAAQASABIAAAAXAAMAAQASABIAAAAXAAQAAQASABIAAAAXAAUAAQASABIAAAAXAAYAAQASABIAAAAXAAcAAQASABIAAAAXAAgAAQASABIAAAAXAAkAAQASABIAAAAXAAoAAQASABIAAAAXAAsAAQASABIAAAAXAAwAAQASABIAAAAXAA0AAQASABIAAAAXAA4AAQASABIAAAAXAA8AAQASABIAAAAXABAAAQASABIAAAAXABEAAQASABIAAAAXABIAAQATAAsAAAAXAB0AAQAQAAkAAAAXAB4AAQASABIAAAAXAB8AAQASABIAAAAXACAAAQASABIAAAAXACEAAQASABIAAAAXACIAAQASABIAAAAXACMAAQASABIAAAAXACQAAQASABIAAAAXACUAAQASABIAAAAYAAAAAQASABIAAAAYAAEAAQASABIAAAAYAAIAAQASABIAAAAYAAMAAQASABIAAAAYAAQAAQASABIAAAAYAAUAAQASABIAAAAYAAYAAQASABIAAAAYAAcAAQASABIAAAAYAAgAAQASABIAAAAYAAkAAQASABIAAAAYAAoAAQASABIAAAAYAAsAAQASABIAAAAYAAwAAQASABIAAAAYAA0AAQASABIAAAAYAA4AAQASABIAAAAYAA8AAQASABIAAAAYABAAAQASABIAAAAYABEAAQASABIAAAAYABIAAQASABIAAAAYABMAAQATAAUAAAAYAB0AAQAQAAkAAAAYAB4AAQASABIAAAAYAB8AAQASABIAAAAYACAAAQASABIAAAAYACEAAQASABIAAAAYACIAAQASABIAAAAYACMAAQASABIAAAAYACQAAQASABIAAAAYACUAAQASABIAAAAZAAAAAQASABIAAAAZAAEAAQASABIAAAAZAAIAAQASABIAAAAZAAMAAQASABIAAAAZAAQAAQASABIAAAAZAAUAAQASABIAAAAZAAYAAQASABIAAAAZAAcAAQASABIAAAAZAAgAAQASABIAAAAZAAkAAQASABIAAAAZAAoAAQASABIAAAAZAAsAAQASABIAAAAZAAwAAQASABIAAAAZAA0AAQASABIAAAAZAA4AAQASABIAAAAZAA8AAQASABIAAAAZABAAAQASABIAAAAZABEAAQASABIAAAAZABIAAQASABIAAAAZABMAAQAQAAsAAAAZAB0AAQAQAAkAAAAZAB4AAQASABIAAAAZAB8AAQASABIAAAAZACAAAQASABIAAAAZACEAAQASABIAAAAZACIAAQASABIAAAAZACMAAQASABIAAAAZACQAAQASABIAAAAZACUAAQASABIAAAAaAAAAAQASABIAAAAaAAEAAQASABIAAAAaAAIAAQASABIAAAAaAAMAAQASABIAAAAaAAQAAQASABIAAAAaAAUAAQASABIAAAAaAAYAAQASABIAAAAaAAcAAQASABIAAAAaAAgAAQASABIAAAAaAAkAAQASABIAAAAaAAoAAQASABIAAAAaAAsAAQASABIAAAAaAAwAAQASABIAAAAaAA0AAQASABIAAAAaAA4AAQASABIAAAAaAA8AAQASABIAAAAaABAAAQASABIAAAAaABEAAQASABIAAAAaABIAAQASABIAAAAaABMAAQAQAAsAAAAaAB0AAQATAAwAAAAaAB4AAQASABIAAAAaAB8AAQASABIAAAAaACAAAQASABIAAAAaACEAAQASABIAAAAaACIAAQASABIAAAAaACMAAQASABIAAAAaACQAAQASABIAAAAaACUAAQASABIAAAAbAAAAAQASABIAAAAbAAEAAQASABIAAAAbAAIAAQASABIAAAAbAAMAAQASABIAAAAbAAQAAQASABIAAAAbAAUAAQASABIAAAAbAAYAAQASABIAAAAbAAcAAQASABIAAAAbAAgAAQASABIAAAAbAAkAAQASABIAAAAbAAoAAQASABIAAAAbAAsAAQASABIAAAAbAAwAAQASABIAAAAbAA0AAQASABIAAAAbAA4AAQASABIAAAAbAA8AAQASABIAAAAbABAAAQASABIAAAAbABEAAQASABIAAAAbABIAAQASABIAAAAbABMAAQATAAsAAAAbABwAAQATAAwAAAAbAB0AAQASABIAAAAbAB4AAQASABIAAAAbAB8AAQASABIAAAAbACAAAQASABIAAAAbACEAAQASABIAAAAbACIAAQASABIAAAAbACMAAQASABIAAAAbACQAAQASABIAAAAbACUAAQASABIAAAAVABMAAQASAAoAAAAVABQAAQASAAoAAAAVABUAAQASAAoAAAAVABYAAQASAAsAAAAXABMAAQAPAAsAAAAYABQAAQASAAoAAAAYABUAAQASAAsAAAAaABwAAQAPAAkAAAAbABQAAQAPAAoAAAAbABUAAQAPAAoAAAAbABYAAQAPAAoAAAAbABcAAQAPAAoAAAAbABgAAQAPAAoAAAAbABkAAQAPAAoAAAAbABoAAQAPAAoAAAAbABsAAQAPAAoAAAA=")
tile_set = SubResource("TileSet_c5nkj")
script = ExtResource("3_ro1ak")

[node name="Entrance" type="Marker2D" parent="."]
position = Vector2(122, 0)

[node name="Exit" type="Marker2D" parent="."]
position = Vector2(122, 600)

[node name="SpecialDoor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpecialDoor"]
position = Vector2(340.5, 377.5)
shape = SubResource("RectangleShape2D_ro1ak")

[node name="RoomCamera" type="Camera2D" parent="."]
position = Vector2(349, 363)
zoom = Vector2(1.3, 1.3)

[node name="FreezeTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="FreezeTrigger"]
position = Vector2(337, 407)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_pddap")
